--- a/views/A3-0.hbs
+++ b/views/A3-0.hbs
@@ -1,19 +1,27 @@
 <ul id="dropdown1" class="dropdown-content">
   <li><a href="/Kiana">Kiana Alejandra</a></li>
   <li class="divider"></li>
-  <li><a href="#!">Angel Oswaldo</a></li>
+  <li><a href="/Oswaldo">Angel Oswaldo</a></li>
   <li class="divider"></li>
-  <li><a href="#!">Emerik Hagen</a></li>
+  <li><a href="/Hagen">Emerik Hagen</a></li>
 </ul>
 <nav class="lime darken-1" >
   <div class="nav-wrapper">
     <a href="/" class="brand-logo left">Sistemas de Información</a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="#">Teoría Básica SI</a></li>
-      <li><a href="#">Tipos de SI</a></li>
-      <li><a href="#">Scrum</a></li>
+      <li><a href="/A1-0">Teoría Básica SI</a></li>
+      <li><a href="/A2-0">Tipos de SI</a></li>
+      <li><a href="/A3-0">Scrum</a></li>
       <!-- Dropdown Trigger -->
       <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Desarrolladores<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
   </div>
 </nav>
+
+
+
+
+
+<ul class="center">
+  <a class="waves-effect waves-teal btn-flat" href="/A3-1">Siguiente</a>
+</ul>
