--- a/views/Oswaldo.hbs
+++ b/views/Oswaldo.hbs
@@ -1,17 +1,17 @@
 <ul id="dropdown1" class="dropdown-content">
   <li><a href="/Kiana">Kiana Alejandra</a></li>
   <li class="divider"></li>
-  <li><a href="#!">Angel Oswaldo</a></li>
+  <li><a href="/Oswaldo">Angel Oswaldo</a></li>
   <li class="divider"></li>
-  <li><a href="#!">Emerik Hagen</a></li>
+  <li><a href="/Hagen">Emerik Hagen</a></li>
 </ul>
 <nav class="black" >
   <div class="nav-wrapper">
     <a href="/" class="brand-logo left">Sistemas de Información</a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="#">Teoría Básica SI</a></li>
-      <li><a href="#">Tipos de SI</a></li>
-      <li><a href="#">Scrum</a></li>
+      <li><a href="/A1-0">Teoría Básica SI</a></li>
+      <li><a href="/A1-0">Tipos de SI</a></li>
+      <li><a href="/A1-0">Scrum</a></li>
       <!-- Dropdown Trigger -->
       <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Desarrolladores<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
@@ -25,7 +25,7 @@
     <h5 align="center">Alumno: Ramírez Castillo Angel Oswaldo</h5><br/>
     <h5 align="center">Número de Cuenta: 3133</h5><br/>
     <h5 align="center">Semestre: 2019-II</h5><br/>
-    <br/>
-</font>
+    <h5 align="center">Correo: weskeryoka@gmail.com</h5><br/>
 
+</font>
 <a href="https://www.facebook.com/oswaldo.wesker"><img src="images/facebook.png"></a>
