--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,24 +1,20 @@
 
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">one</a></li>
-  <li><a href="#!">two</a></li>
+  <li><a href="/Kiana">Kiana Alejandra</a></li>
   <li class="divider"></li>
-  <li><a href="#!">three</a></li>
-</ul>
-<ul id="dw" class="dropdown-content">
-  <li><a href="https://materializecss.com/icons.html">MT</a></li>
-  <li><a href="#!">two</a></li>
+  <li><a href="/Oswaldo">Angel Oswaldo</a></li>
   <li class="divider"></li>
-  <li><a href="#!">three</a></li>
+  <li><a href="Hagen">Emerik Hagen</a></li>
 </ul>
 <nav class="lime darken-1" >
   <div class="nav-wrapper">
-    <a href="#!" class="brand-logo right">Sistemas de Informacion</a>
-    <ul class="left hide-on-med-and-down">
-      <li><a href="#">Sass</a></li>
-      <li><a class="dropdown-trigger" data-target="dw" href="#">Components <i class="material-icons right">arrow_drop_down</i> </a></li>
+    <a href="/" class="brand-logo left">Sistemas de Información</a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="A1-0">Teoría Básica SI</a></li>
+      <li><a href="A2-0">Tipos de SI</a></li>
+      <li><a href="A3-0">Scrum</a></li>
       <!-- Dropdown Trigger -->
-      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Desarrolladores<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
   </div>
 </nav>
