--- a/views/Hagen.hbs
+++ b/views/Hagen.hbs
@@ -17,3 +17,15 @@
     </ul>
   </div>
 </nav>
+
+<body background="images/wendy.jpg">
+<div align="center"><img src="images/jisoo.jpg"width="150" height="150">
+
+<font color="red" face="Comic Sans MS">
+    <h5 align="center">Alumno: Emerik Hagen Emerik Hagen</h5><br/>
+    <h5 align="center">Número de Cuenta: 313219452</h5><br/>
+    <h5 align="center">Semestre: 2019-II</h5><br/>
+    <h5 align="center">Correo: demerakalpha@gmail.com</h5><br/>
+
+</font>
+<a href="https://www.facebook.com/HAGENDEMERAK.SPARTAN"><img src="images/facebook.png"></a>
