--- a/views/Kiana.hbs
+++ b/views/Kiana.hbs
@@ -5,7 +5,7 @@
   <li class="divider"></li>
   <li><a href="/Hagen">Emerik Hagen</a></li>
 </ul>
-<nav class="lime darken-1" >
+<nav class="pink lighten-3" >
   <div class="nav-wrapper">
     <a href="/" class="brand-logo left">Sistemas de Información</a>
     <ul class="right hide-on-med-and-down">
@@ -17,3 +17,15 @@
     </ul>
   </div>
 </nav>
+
+<body background="images/1.jpg">
+<div align="center"><img src="images/2.png"width="150" height="150">
+
+<font color="black" face="Comic Sans MS">
+    <h5 align="center">Alumno: Chavez Ceballos Kiana Alejandra</h5><br/>
+    <h5 align="center">Número de Cuenta: 1915</h5><br/>
+    <h5 align="center">Semestre: 2019-II</h5><br/>
+    <h5 align="center">Correo: kianaalejandra23@hotmail.com </h5><br/>
+
+</font>
+<a href="https://www.facebook.com/sama.kianita"><img src="images/facebook.png"></a>
