--- a/views/Kiana.hbs
+++ b/views/Kiana.hbs
@@ -19,7 +19,7 @@
 </nav>
 
 <body background="images/1.jpg">
-<div align="center"><img src="images/2.png"width="150" height="150">
+<div align="center"><img src="images/2.jpg"width="150" height="150">
 
 <font color="black" face="Comic Sans MS">
     <h5 align="center">Alumno: Chavez Ceballos Kiana Alejandra</h5><br/>
