--- a/views/A1-0.hbs
+++ b/views/A1-0.hbs
@@ -18,7 +18,34 @@
   </div>
 </nav>
 
+<h1 style="margin-left: 2em">Dato</h1>
+<h5><p style="margin-left: 2em">• Derivado del latín “datum” cuyo significado literal es “hecho”.<br><br>
+• Un dato no dice nada por sí solo, aislado en carecer de valor o relevancia.<br><br>
+• Los datos son los insumos para generar información.<br><br>
+• Características:
+</p> <p style="margin-left: 4em">- Es construido o generado.<br>
+- Debe ser almacenado en un medio físico.<br>
+- Deben ser expresados en un lenguaje conocido.
+</p> </h5>
 
+<h1 style="margin-left: 2em">Información</h1>
+<h5> <p style="margin-left: 2em">• Se produce información cuando un conjunto de datos son procesados por un sistema.<br><br>
+• Para ser útil, la información debe ser relevante, completa, precisa y actual.<br><br>
+• Características:
+</p> <p style="margin-left: 4em">- Relevante.<br>
+- Organizada para un propósito.<br>
+- Tiene un contexto.
+</p> </h5>
+<div align="center"><img src="images/info.png"> </div>
+
+<h1 style="margin-left: 2em">Sistema de Información</h1>
+<h5> <p style="margin-left: 2em">• Es un conjunto de elementos orientados al tratamiento y administración de datos e información, organizados y listos para su uso posterior, generados para cubrir una necesidad o un objetivo.<br><br>
+• Dichos elementos formarán parte de alguna de las siguientes categorías:
+</p> <p style="margin-left: 4em">- Personas.<br>
+- Actividades o técnicas de trabajo.<br>
+- Datos.<br>
+- Recursos materiales en general papel, lápices, libros, carpetas, etc.
+</p> </h5>
 
 
 
