--- a/views/A1-1.hbs
+++ b/views/A1-1.hbs
@@ -19,8 +19,15 @@
 </nav>
 
 <h1 align="center">La Información Útil</h1>
-
-
+<h5> <p style="margin-left: 3em">• Económica: El costo de la producción de la información debe ser relativamente barato. Las personas que toman las decisiones siempre deben balancear el valor de la información con el costo de producirla.<br><br>
+• Flexible: La información es flexible cuando puede utilizarse para una gran variedad de propósitos.<br><br>
+• Relevante: Es relevante cuando es importante para las personas que toman las decisiones.<br><br>
+• Segura: Protección al acceso de la información.<br><br>
+• Accesible: Los usuarios autorizados deben poder acceder a la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.<br><br>
+• Simple: La información debe establecerse en términos claros y concisos.<br><br>
+• Oportuna: Cuando se requiere y tiene un valor para el negocio.<br><br>
+• Verificable: Puede ser comprobada para verificar que es correcta.
+</p></h5>
 
 <ul class="center">
   <a class="waves-effect waves-teal btn-flat" href="/A1-0">Anterior</a>
