--- a/views/A1-2.hbs
+++ b/views/A1-2.hbs
@@ -19,7 +19,14 @@
 </nav>
 
 <h1 align="center">Componentes Básicos de un Sistema de Información</h1>
-
+<h5> <p style="margin-left: 2em">• Los sistemas de información son una combinación de tres partes principales: las personas, los procesos del negocio y los equipos de tecnologías de la información.<br><br>
+• Un sistema de información debe cumplir con los siguientes componentes básicos interactuando entre sí:
+</p> <p style="margin-left: 5em">- El hardware, equipo físico utilizado para procesar y almacenar datos.<br><br>
+- El software y los procedimientos utilizados para transformar y extraer información.<br><br>
+- Los datos que representan las actividades de la empresa.<br><br>
+- La red que permite compartir recursos entre computadoras y dispositivos.<br><br>
+- Las personas que desarrollan, mantienen y utilizan el sistema.
+</p> </h5>
 
 
 <ul class="center">
