Titulo de Colores

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,3 +18,5 @@
     </ul>
   </div>
 </nav>
+
+<h1 align="center"> <span style="color:green;">H</span> <span style="color:red;">O</span> <span style="color:blue;">K</span> </h1><br><br><br><br>
