Descripsion de Colores

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,3 +20,5 @@
 </nav>
 
 <h1 align="center"> <span style="color:green;">H</span> <span style="color:red;">O</span> <span style="color:blue;">K</span> </h1><br><br><br><br>
+<h3 align="center"> <span style="color:orange;">Proyecto</span> <span style="color:brown;">Final</span> <span style="color:yellow;">de</span> <span style="color:purple;">Sistemas</span>
+<span style="color:grey;">de</span> <span style="color:pink;">Información</span></h3>
