--- a/views/A3-0.hbs
+++ b/views/A3-0.hbs
@@ -5,7 +5,7 @@
   <li class="divider"></li>
   <li><a href="/Hagen">Emerik Hagen</a></li>
 </ul>
-<nav class="lime darken-1" >
+<nav class="orange lighten-1" >
   <div class="nav-wrapper">
     <a href="/" class="brand-logo left">Sistemas de Información</a>
     <ul class="right hide-on-med-and-down">
@@ -18,8 +18,15 @@
   </div>
 </nav>
 
+<font color="Maroon" face="Times New Roman">
+  <h5 align="center">¿Qué es SRUM?</h5><br/>
 
-
+<font color="black" face="Times New Roman">
+    <h6 align="center">Scrum es un proceso en el que se aplican de manera regular
+      un conjunto de buenas prácticas para trabajar colaborativamente, en equipo,
+      y obtener el mejor resultado posible de un proyecto. Estas prácticas se apoyan
+      unas a otras y su selección tiene origen en un estudio de la manera de trabajar
+      de equipos altamente productivos.</h6><br/>
 
 
 <ul class="center">
