--- a/views/A3-0.hbs
+++ b/views/A3-0.hbs
@@ -22,10 +22,13 @@
   <h4 align="center">¿Qué es SRUM?</h4><br/>
 
     <h5 align="center">SRUM es un marco de trabajo en el que equipos cross-funcionales pueden crear productos o desarrollar proyectos de una forma
-    interactiva e incremental. El desarrollo se estructura en ciclos de trabajos llamados Sprints (también conocidos como interacciones). Estas onloadedmetadata="interacciones no deben durar
-    mas de cuantro semanas cada uno (ciendo dos semanas la duracion habitual) y tienen lugar una tras otra sin pausa entre ellas. Los Sprints estan acotados en el tienpo - finalizan en algunafecha determinada
-    independentientemente de si el trabajo a finalizado por completo o no, y jamas se prorrogan. Normalemte los equipos SCRUM escogen una duracion de Sprint y la mantienen para todos sus Sprints hasta que mejoran
-    y puden emplear ciclos mas cortos. "</h5><br/>
+    interactiva e incremental. "</h5><br/>
+
+    <h5 align = "center">El desarrollo se estructura en ciclos de trabajos llamados Sprints (también conocidos como interacciones). Estas onloadedmetadata="interacciones no deben durar
+     mas de cuantro semanas cada uno (ciendo dos semanas la duracion habitual) y tienen lugar una tras otra sin pausa entre ellas. Los Sprints estan acotados en el tienpo - finalizan en algunafecha determinada
+     independentientemente de si el trabajo a finalizado por completo o no, y jamas se prorrogan. Normalemte los equipos SCRUM escogen una duracion de Sprint y la mantienen para todos sus Sprints hasta que mejoran
+     y puden emplear ciclos mas cortos.</h5><br/>
+     
     <h5 align="center">Al principio de cada Sprint, un equipo cross-funcional (de entorno a 7 personas) selecciona elementos (peticiones del cliente) de una lista PRIORIZADA!!!!. El equipo acuerda un objetivo
       colectivo respecto a lo que creen que podran entrgar al final del Sprint, Algo que sea tangible y que estara "Terminada" por completo. Durante el Sprint no se podan añadir nuevos Elemntos;  "</h5><br/>
 
