--- a/views/A3-0.hbs
+++ b/views/A3-0.hbs
@@ -19,29 +19,31 @@
 </nav>
 
 
-  <h4 align="center">¿Qué es SRUM?</h4><br/>
+<h4 align="center">¿Qué es SRUM?</h4><br/>
 
-    <h5 align="center">SRUM es un marco de trabajo en el que equipos cross-funcionales pueden crear productos o desarrollar proyectos de una forma
-    interactiva e incremental. "</h5><br/>
+      <h5 align="center">SRUM es un marco de trabajo en el que equipos cross-funcionales pueden crear productos o desarrollar proyectos de una forma
+      interactiva e incremental. "</h5><br/>
 
-    <div align="center"><img src="images/3.jpg"> </div>
+<div align="center"><img src="images/3.jpg"> </div>
 
-    <h5 align = "center">El desarrollo se estructura en ciclos de trabajos llamados Sprints (también conocidos como interacciones). Estas onloadedmetadata="interacciones no deben durar
-     mas de cuantro semanas cada uno (ciendo dos semanas la duracion habitual) y tienen lugar una tras otra sin pausa entre ellas. Los Sprints estan acotados en el tienpo - finalizan en algunafecha determinada
-     independentientemente de si el trabajo a finalizado por completo o no, y jamas se prorrogan. Normalemte los equipos SCRUM escogen una duracion de Sprint y la mantienen para todos sus Sprints hasta que mejoran
-     y puden emplear ciclos mas cortos.</h5><br/>
+      <h5 align = "center">El desarrollo se estructura en ciclos de trabajos llamados Sprints (también conocidos como interacciones). Estas onloadedmetadata="interacciones no deben durar
+       mas de cuantro semanas cada uno (ciendo dos semanas la duracion habitual) y tienen lugar una tras otra sin pausa entre ellas. Los Sprints estan acotados en el tienpo - finalizan en algunafecha determinada
+       independentientemente de si el trabajo a finalizado por completo o no, y jamas se prorrogan. Normalemte los equipos SCRUM escogen una duracion de Sprint y la mantienen para todos sus Sprints hasta que mejoran
+       y puden emplear ciclos mas cortos.</h5><br/>
 
-    <h5 align="center">Al principio de cada Sprint, un equipo cross-funcional (de entorno a 7 personas) selecciona elementos (peticiones del cliente) de una lista PRIORIZADA!!!!. El equipo acuerda un objetivo
-      colectivo respecto a lo que creen que podran entrgar al final del Sprint, Algo que sea tangible y que estara "Terminada" por completo. Durante el Sprint no se podan añadir nuevos Elementos; Srum
-      se adapta a los cambios en el siguiente Sprint, pero el pequeño Sprint actual se esta pensado para concentrarnos en un objetivo pequeño, claro y relativamente estable.
-   "</h5><br/>
+      <h5 align="center">Al principio de cada Sprint, un equipo cross-funcional (de entorno a 7 personas) selecciona elementos (peticiones del cliente) de una lista PRIORIZADA!!!!. El equipo acuerda un objetivo
+        colectivo respecto a lo que creen que podran entrgar al final del Sprint, Algo que sea tangible y que estara "Terminada" por completo. Durante el Sprint no se podan añadir nuevos Elementos; Srum
+        se adapta a los cambios en el siguiente Sprint, pero el pequeño Sprint actual se esta pensado para concentrarnos en un objetivo pequeño, claro y relativamente estable.
+     "</h5><br/>
 
-   <h5 align="center"> Todos los días el Equipo se reúne brevemente para inspeccionar su progreso y ajustar los siguientes pasos necesarios para Completar el trabajo pendiente.
-  "</h5><br/>
+<div align="center"><img src="images/5.png"> </div>
 
-    <h5 align="center"> Al final del Sprint, el equipo revisara el Sprint con los diferentes Stakeholders (interesados e involuvrados en el producto) y realiza una demostración de los que an desarrollado. Se obtiene
-      feedback que prodra ser incorporado en el siguiente Sprint. Scrum enfazita un producto "Funcionado" al final del Sprint que esté realemnte "terminado".
-   "</h5><br/>
+     <h5 align="center"> Todos los días el Equipo se reúne brevemente para inspeccionar su progreso y ajustar los siguientes pasos necesarios para Completar el trabajo pendiente.
+    "</h5><br/>
+
+      <h5 align="center"> Al final del Sprint, el equipo revisara el Sprint con los diferentes Stakeholders (interesados e involuvrados en el producto) y realiza una demostración de los que an desarrollado. Se obtiene
+        feedback que prodra ser incorporado en el siguiente Sprint. Scrum enfazita un producto "Funcionado" al final del Sprint que esté realemnte "terminado". Un lema recurrente en Scrum es "inspección y adaptación".
+     "</h5><br/>
 
 <ul class="center">
   <a class="waves-effect waves-teal btn-flat" href="/A3-1">Siguiente</a>
