--- a/views/A3-0.hbs
+++ b/views/A3-0.hbs
@@ -18,6 +18,16 @@
   </div>
 </nav>
 
+<h4 align="center">¿Qué es una Metodologia Agil?</h4><br/>
+
+<h5 align="center"> Metodología ágil es una de varias metodologías de desarrollo de software basadas en el desarrollo iterativo y incremental,
+  en contraposición a las metodologías tradicionales de desarrollo de software lineal o cascada. Una metodología ágil proporciona un marco para apoyar el diseño, desarrollo y pruebas de soluciones de software
+  a lo largo de su ciclo de vida.</h5><br/>
+
+<h5 align="center"> Los métodos ágiles fomentan respuestas rápidas y flexibles al cambio mediante la promoción de la planificación adaptativa,
+  la identificación de requisitos colaborativos y la racionalización entre el equipo interfuncional autoorganizado, así como el desarrollo gradual de soluciones. Muchos esfuerzos de desarrollo de
+  software comerciales modernos siguen este tipo de enfoque.</h5><br/>
+
 
 <ul class="center">
   <a class="waves-effect waves-teal btn-flat" href="/A3-1">Siguiente</a>
