--- a/views/A3-0.hbs
+++ b/views/A3-0.hbs
@@ -28,7 +28,7 @@
   la identificación de requisitos colaborativos y la racionalización entre el equipo interfuncional autoorganizado, así como el desarrollo gradual de soluciones. Muchos esfuerzos de desarrollo de
   software comerciales modernos siguen este tipo de enfoque.</h5><br/>
 
-<div align="center"><img src="images/6.png"> </div>
+<div align="center"><img src="images/6.jpg"> </div>
 
 <ul class="center">
   <a class="waves-effect waves-teal btn-flat" href="/A3-1">Siguiente</a>
