--- a/views/A3-2.hbs
+++ b/views/A3-2.hbs
@@ -18,6 +18,28 @@
   </div>
 </nav>
 
+<h4 align="center">Roles de Scrum</h4><br/>
+
+<h5 align="center"> En Scrum, el equipo se focaliza en construir software de calidad. La gestión de un proyecto Scrum se centra en definir cuáles son las características que debe tener el producto a construir (qué construir, qué no y en qué orden) y en vencer cualquier obstáculo que pudiera entorpecer la tarea del equipo de desarrollo.
+El equipo Scrum está formado por los siguientes roles:
+"</h5><br/>
+
+<h5> <p style="margin-left: 2em">
+• Srum Master <br><br>
+• Product Owner <br><br>
+• Team
+
+<h5 align="margin-left">- Scrum master: Persona que lidera al equipo guiándolo para que cumpla las reglas y procesos de la metodología.
+  Gestiona la reducción de impedimentos del proyecto y trabaja con el Product Owner para maximizar el ROI.  </h5><br/>
+
+  <h5 align="margin-left">- Product owner (PO): Representante de lso accionistas y clientes que usan el software.
+    Se focaliza en la parte de negocio y el es responsable del ROI del proyecto (entregar un valor superior
+    al dinero invertido). Traslada la visión del proyecto al equipo, formaliza las prestaciones
+    en historias a incorporar en el Product Backlog y las reprioriza de forma regular.</h5><br/>
+
+    <h5 align="margin-left">- Team: Grupo de profesionales con los conocimientos técnicos necesarios y que desarrollan el proyecto de manera
+      conjunta llevando a cabo las historias a las que se comprometen al inicio de cada sprint. </h5><br/>
+
 
 
 
