--- a/views/A3-2.hbs
+++ b/views/A3-2.hbs
@@ -29,19 +29,20 @@ El equipo Scrum está formado por los siguientes roles:
 • Product Owner <br><br>
 • Team
 
+<div align="center"><img src="images/7.png"> </div>
+
 <h5 align="margin-left">- Scrum master: Persona que lidera al equipo guiándolo para que cumpla las reglas y procesos de la metodología.
   Gestiona la reducción de impedimentos del proyecto y trabaja con el Product Owner para maximizar el ROI.  </h5><br/>
 
-  <h5 align="margin-left">- Product owner (PO): Representante de lso accionistas y clientes que usan el software.
+<h5 align="margin-left">- Product owner (PO): Representante de lso accionistas y clientes que usan el software.
     Se focaliza en la parte de negocio y el es responsable del ROI del proyecto (entregar un valor superior
     al dinero invertido). Traslada la visión del proyecto al equipo, formaliza las prestaciones
     en historias a incorporar en el Product Backlog y las reprioriza de forma regular.</h5><br/>
 
-    <h5 align="margin-left">- Team: Grupo de profesionales con los conocimientos técnicos necesarios y que desarrollan el proyecto de manera
+<h5 align="margin-left">- Team: Grupo de profesionales con los conocimientos técnicos necesarios y que desarrollan el proyecto de manera
       conjunta llevando a cabo las historias a las que se comprometen al inicio de cada sprint. </h5><br/>
 
-
-
+<div align="center"><img src="images/8.png"> </div>
 
 
 <ul class="center">
