--- a/views/A3-2.hbs
+++ b/views/A3-2.hbs
@@ -5,7 +5,7 @@
   <li class="divider"></li>
   <li><a href="/Hagen">Emerik Hagen</a></li>
 </ul>
-<nav class="lime darken-1" >
+<nav class="orange lighten-2" >
   <div class="nav-wrapper">
     <a href="/" class="brand-logo left">Sistemas de Información</a>
     <ul class="right hide-on-med-and-down">
