--- a/views/A3-3.hbs
+++ b/views/A3-3.hbs
@@ -24,23 +24,35 @@
 <h5><p style="margin-left: 2em"><br>Esta herramienta se enfoca en ofrecer un stack completo de Product y Project Management, desde la gestión de Portfolio y Budgeting
   hasta integración continua, pasando por un wiki y un sistema de Help Desk. <br>
 
+<div align="center"><img src="images/9.jpg"> </div>
+
   <h1 style="margin-left: 2em">VersionOne</h1>
   <h5><p style="margin-left: 2em"><br>A raíz de una fuerte colaboración con Scaled Agile Inc, VersionOne ha ido ganando popularidad durante los últimos años.
   Ofrece un stack similar al de Atlassian, quizás más enfocado en el framework SAFe, carece de herramientas de integración continua aunque tiene integraciones muy interesantes <br>
 
+<div align="center"><img src="images/10.jpg"> </div>
+
   <h1 style="margin-left: 2em">TargetProcess</h1>
   <h5><p style="margin-left: 2em"><br>Esta herramienta que lleva seis años en el mercado, se enfoca en el desarrollo de Producto más que de Proyectos, desde el Story Mapping hasta el incremento. TargetProcess se encuentra a medio camino entre Active Collab y Pivotal Tracker, permitiendo a la vez una gestión clásica y ágil de los Proyectos<br>
 
+<div align="center"><img src="images/11.png"> </div>
+
   <h1 style="margin-left: 2em">Active Collab</h1>
   <h5><p style="margin-left: 2em"><br>Otro de los clásicos. Éste se enfoca más en Project Management tradicional. Te permite hacer tracking de horas y de proyectos con algunos módulos más orientados a la planificación ágil de producto. Su principal objetivo es competir con Basecamp, la herramienta más establecida en gestión de proyectos tradicional.<br>
+
+<div align="center"><img src="images/12.png"> </div>
 
   <h1 style="margin-left: 2em">Pivotal Tracker</h1>
   <h5><p style="margin-left: 2em"><br>Esta herramienta está diseñada por Pivotal Labs, una compañía de desarrollo ágil de software que da servicio a clientes.
 
 Pivotal ha sido durante años un referente en cuanto a diseño y usabilidad, y esa ha sido su mejor baza contra herramientas mas grandes. <br>
 
+<div align="center"><img src="images/13.png"> </div>
+
   <h1 style="margin-left: 2em">Taiga</h1>
   <h5><p style="margin-left: 2em"><br>Taiga es un proyecto Español que lleva poco tiempo en el mercado pero es muy prometedor. Taiga incorpora una gestión simple de Product Backlog Ítems (aunque ellos les llaman historias de usuario), un tablero para los equipos y permiten hacer planificación de producto dentro de la propia herramienta. Para equipos pequeños es gratis.<br>
+
+<div align="center"><img src="images/14.png"> </div>
 
 <ul class="center">
   <a class="waves-effect waves-teal btn-flat" href="/A3-2">Anterior</a>
