--- a/views/A2-0.hbs
+++ b/views/A2-0.hbs
@@ -18,6 +18,58 @@
   </div>
 </nav>
 
+<h1 style="margin-left: 2em">TPS Transaction Processing System</h1>
+<h5><p style="margin-left: 2em">• Su principal objetivo es llevar el registro de actividades y operaciones
+en una empresa evitando su perdida y/o corrupción ante fallos.<br><br>
+• Una transacción es un intercambio de información que es reflejada en
+un medio persistente (por ejemplo un DBMS), y debe contar con las
+siguientes caracteristicas:
+</p> <p style="margin-left: 4em">- Atomicidad.<br>
+- Consistencia.<br>
+- Aislamiento.<br>
+- Durabilidad(Persistencia)<br><br>
+<p style="margin-left: 2em">• Permiten consultar el estado de las operaciones en cualquier
+momento..<br><br>
+<p style="margin-left: 2em">• “Responsable de mantener los registros de ingresos y gastos de la
+empresa, y de producir informes como estados de ingresos y hojas de
+balance ”
+</p> </h5>
+
+<h1 style="margin-left: 2em">Atomicidad</h1>
+<h5> <p style="margin-left: 2em">• Se refiere a que la transacción debe ser completada en su totalidad o
+en su defecto debe realizarse una restauración del proceso a su
+estado original (antes iniciar la transacción).
+ <h1 style="margin-left: 2em">Consistencia</h1><br>
+  <h5> <p style="margin-left: 2em">• Se debe salvaguardar la integridad de la información cumpliendo
+  reglas relacionales y de negocio.<br>
+  • El sistema debe ser capaz de identificar transacciones que vayan en
+  contra este principio y debe realizar una operación de roll-back.
+</p> </h5>
+<h1 style="margin-left: 2em">Aislamiento</h1><br>
+<h5> <p style="margin-left: 2em"> • Cada transacción debe ser considerada independiente de otras
+transacciones.<br>
+• Esto permite que el sistema realice transacciones recurrentes y
+simultaneas.
+</p> </h5>
+<h1 style="margin-left: 2em">Durabilidad</h1><br>
+<h5> <p style="margin-left: 2em"> • La transacciones y sus operaciones internas deben ser almacenadas a
+un medio persistente, hasta el momento que otra operación o
+transacción cambie el estado de los datos.<br>
+• En todo momento las transacciones aisladas pueden ser consultadas.
+</p> </h5>
+<h1 style="margin-left: 2em">Arquitectura tradicional de un TPS</h1><br>
+<div align="center"><img src="images/tps1.jpg"> </div>
+
+<h1 style="margin-left: 2em">¿En que área de la organización se emplean?.
+</h1><br>
+<h5> <p style="margin-left: 2em">• Sistemas de inventario<br>
+<p style="margin-left: 2em">• Sistemas de Producción.<br>
+<p style="margin-left: 2em">• Sistema de contabilidad y finanzas.<br>
+<p style="margin-left: 2em">• Sistema de recursos Humanos.<br>
+<p style="margin-left: 2em">• Sistema de ventas.
+</p> </h5>
+
+
 
 
 
