--- a/views/A2-0.hbs
+++ b/views/A2-0.hbs
@@ -5,7 +5,7 @@
   <li class="divider"></li>
   <li><a href="/Hagen">Emerik Hagen</a></li>
 </ul>
-<nav class="lime darken-1" >
+<nav class="#00FFFF" >
   <div class="nav-wrapper">
     <a href="/" class="brand-logo left">Sistemas de Información</a>
     <ul class="right hide-on-med-and-down">
@@ -18,7 +18,7 @@
   </div>
 </nav>
 
-<h1 style="margin-left: 2em">TPS Transaction Processing System</h1>
+<h1 style="margin-left: 2em">TPS (Transaction Processing System)</h1>
 <h5><p style="margin-left: 2em">• Su principal objetivo es llevar el registro de actividades y operaciones
 en una empresa evitando su perdida y/o corrupción ante fallos.<br><br>
 • Una transacción es un intercambio de información que es reflejada en
