A2 completa y correxiones en A1

--- a/views/A2-0.hbs
+++ b/views/A2-0.hbs
@@ -45,23 +45,23 @@ estado original (antes iniciar la transacción).
   • El sistema debe ser capaz de identificar transacciones que vayan en
   contra este principio y debe realizar una operación de roll-back.
 </p> </h5>
-<h1 style="margin-left: 2em">Aislamiento</h1><br>
+<h1 style="margin-left: 2em">Aislamiento</h1>
 <h5> <p style="margin-left: 2em"> • Cada transacción debe ser considerada independiente de otras
 transacciones.<br>
 • Esto permite que el sistema realice transacciones recurrentes y
 simultaneas.
 </p> </h5>
-<h1 style="margin-left: 2em">Durabilidad</h1><br>
+<h1 style="margin-left: 2em">Durabilidad</h1>
 <h5> <p style="margin-left: 2em"> • La transacciones y sus operaciones internas deben ser almacenadas a
 un medio persistente, hasta el momento que otra operación o
 transacción cambie el estado de los datos.<br>
 • En todo momento las transacciones aisladas pueden ser consultadas.
 </p> </h5>
-<h1 style="margin-left: 2em">Arquitectura tradicional de un TPS</h1><br>
+<h1 style="margin-left: 2em">Arquitectura tradicional de un TPS</h1>
 <div align="center"><img src="images/tps1.jpg"> </div>
 
 <h1 style="margin-left: 2em">¿En que área de la organización se emplean?.
-</h1><br>
+</h1>
 <h5> <p style="margin-left: 2em">• Sistemas de inventario<br>
 <p style="margin-left: 2em">• Sistemas de Producción.<br>
 <p style="margin-left: 2em">• Sistema de contabilidad y finanzas.<br>
