--- a/views/A2-1.hbs
+++ b/views/A2-1.hbs
@@ -18,8 +18,72 @@
   </div>
 </nav>
 
+<h1 style="margin-left: 2em">CRM (Customer Relationship Management)
+</h1>
+<h5><p style="margin-left: 2em">• Systemas de gestion de relaciones con los clientes.<br><br>
+• Son sistemas orientados a mejorar la relación de los clientes,
+conseguir y mantenerlos. Desarrollar relaciones más fuertes.<br><br>
+• Buscan hacer el buen trato a sus clientes el diferenciador con
+respecto a sus competidores. Ventaja competitiva.<br><br>
+• En un entorno basado en web la relación con el cliente requiere que
+sea mas personal, para lo cual se obtiene estudiando: perfiles ,
+hábitos de compra y estrategias de marketing.<br><br>
+• Marketing personal: se crean campañas a sectores que esten mas
+propensos a contratarlos.<br><br>
+• Los clientes fieles generan la mayor cantidad de ingresos en una
+empresa.<br><br>
+• Clientes satisfechos generan nuevos clientes por recomendación.<br><br>
+• Recuperar un cliente perdido es el doble de difícil de atrar que a uno
+totalmente nuevo.
+</p> </h5>
+<br>
+<h1 style="margin-left: 4em">Componentes de un CRM
+</h1><br><br>
+<h1 style="margin-left: 2em">1.- Servicio al cliente
+</h1>
+<h5><p style="margin-left: 2em">• Centros de atención Telefónica (Call-center).<br><br>
+• Centros de ayuda (Help-Desk).<br><br>
+• Apps y aplicaciones Web para el apoyo de clientes.<br><br>
+• Feedback.
+</p> </h5>
+<h1 style="margin-left: 2em">2.- Automatización de ventas y marketing.
+</h1>
+<h5><p style="margin-left: 2em">• Administración de clientes.<br><br>
+• Administración de campañas.<br><br>
+• Administración de ventas.<br><br>
+• Análisis de ventas.<br><br>
+• Selección de clientes de mayor potencial.<br><br>
+• Soporte para la configuración del producto.<br><br>
+• Entre otras.
+</p> </h5>
 
-
+<h1 style="margin-left: 2em">3.- Analítica e inteligencia del negocio.
+</h1>
+<h5><p style="margin-left: 2em">• Es el empleo de herramientas y técnicas para la identificación de
+oportunidades de negocio en base a los datos de los clientes actuales.<br><br>
+• Para ello se emplean cubos de datos o sistemas OLAP (On Line
+Analytical Processing)
+</p> </h5>
+<h1 style="margin-left: 2em">4.- Integración.
+</h1>
+<h5><p style="margin-left: 2em">• Es el conjunto de software que da soporte a un CRM conformado por
+un Front Office y un Back Office.<br><br>
+• Front-Office es el subconjunto de software que tiene conexión directa
+con el cliente, principalmente tomar pedidos, configurar productos y
+dar soporte post-venta(al producto). Analizan y procesan
+produciendo información del cliente casi de forma instantanea.<br><br>
+• Back-Office Es el subconjunto de herramientas que no tienen relación
+o interacción directa con el cliente. Pero si almacenan y procesan los
+datos adquiridos de él. Requiere de operaciones de analisis o Mineria
+de datos para obtener onformación compleja del comportamiento de
+clientes
+</p> </h5>
+<h1 style="margin-left: 2em">software CRM popular.
+</h1>
+<h5><p style="margin-left: 2em">• SAP<br><br>
+• Oracle Peoplesoft<br><br>
+• Salesforce.com
+</p> </h5>
 
 
 <ul class="center">
