--- a/views/A2-2.hbs
+++ b/views/A2-2.hbs
@@ -17,6 +17,48 @@
     </ul>
   </div>
 </nav>
+<h1 style="margin-left: 2em">Sistema de Información
+Gerencial (MIS)
+</h1>
+<h5><p style="margin-left: 2em">• Apoya a la gerencia con las ac/vidades de control, monitoreo y
+administra/va para la toma de decisiones.<br><br>
+• Orientado a la Gerencia de nivel medio.<br><br>
+• Sinte/zan e informan el comportamiento de el nivel opera/vo,
+tomando como base datos de ERP, o un TPS, o de otros sistemas de
+todas las áreas de la organización.<br><br>
+• Permiten presentar un informe del estado de la organización en un
+intervalo de /empo predefinido.
+</p> </h5>
+<h1 style="margin-left: 2em">¿De donde obtiene información de entrada?
+</h1>
+<h5><p style="margin-left: 2em">• De sistemas TPS:
+  </p> </h5>
+<h6><p style="margin-left: 3em"> • Sistemas de inventario.<br>
+• Sistemas de planeación de producción.<br>
+• Sistemas de Producción.<br>
+• Sistema de contabilidad y finanzas.<br>
+• Sistema de recursos Humanos.<br>
+• Sistema de ventas.<br>
+• Sistemas de Inteligencia de negocio.
+</h6></p>
+<h5><p style="margin-left: 2em">• De un Sistema de Planificación de Recursos (ERP), que son sistemas
+que integran a los anteriores.
+</p> </h5>
+<br><br>
+<div align="center"><img src="images/MI1.png"> </div>
+<br><br>
+<h1 style="margin-left: 2em">MIS desde el punto de vista técnico
+</h1>
+<h5><p style="margin-left: 2em">• Es una base de datos centralizada que almacena toda la información
+del estado de la compañía para que los administradores generen
+reportes y tomen decisiones.<br><br>
+• No almacena toda la información del negocio, solo un resumen de
+cada área.<br><br>
+• Procesa esta información para generar reportes.
+</p> </h5>
+
+
+
 
 
 
