--- a/views/Hagen.hbs
+++ b/views/Hagen.hbs
@@ -25,6 +25,7 @@
     <h5 align="center">Alumno: Emerik Hagen Emerik Hagen</h5><br/>
     <h5 align="center">Número de Cuenta: 313219452</h5><br/>
     <h5 align="center">Semestre: 2019-II</h5><br/>
+    <h5 align="center">Hobbie dormir y encerrar lolis en el sotano.</h5><br/>
     <h5 align="center">Correo: demerakalpha@gmail.com</h5><br/>
 
 </font>
